--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -1,4 +1,5 @@
 ---
+import { Font } from "astro:assets";
 import "../styles/global.css";
 ---
 
@@ -12,6 +13,8 @@ import "../styles/global.css";
 		<meta name="viewport" content="width=device-width" />
 		<meta name="generator" content={Astro.generator} />
 		<title>Garden</title>
+		<Font cssVariable="--font-switzer" preload />
+		<Font cssVariable="--font-cabinet" preload />
 	</head>
 	<body>
 		<slot />
