--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -1,6 +1,9 @@
 ---
 import { Font } from "astro:assets";
 import "../styles/global.css";
+import { ClientRouter } from "astro:transitions";
+
+const { title } = Astro.props;
 ---
 
 <html lang="en">
@@ -12,9 +15,10 @@ import "../styles/global.css";
 		/>
 		<meta name="viewport" content="width=device-width" />
 		<meta name="generator" content={Astro.generator} />
-		<title>Garden</title>
+		<title>{title}</title>
 		<Font cssVariable="--font-switzer" preload />
 		<Font cssVariable="--font-cabinet" preload />
+		<ClientRouter />
 	</head>
 	<body>
 		<slot />
