--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -2,6 +2,7 @@
 import { Font } from "astro:assets";
 import "../styles/global.css";
 import { ClientRouter } from "astro:transitions";
+import InspectionChamber from "astro-vtbot/components/InspectionChamber.astro";
 
 const { title } = Astro.props;
 ---
@@ -16,9 +17,12 @@ const { title } = Astro.props;
 		<meta name="viewport" content="width=device-width" />
 		<meta name="generator" content={Astro.generator} />
 		<title>{title}</title>
+
 		<Font cssVariable="--font-switzer" preload />
 		<Font cssVariable="--font-cabinet" preload />
+
 		<ClientRouter />
+		<InspectionChamber />
 	</head>
 	<body>
 		<slot />
