Tag badges on preview block

--- a/src/pages/test-preview-block.astro
+++ b/src/pages/test-preview-block.astro
@@ -17,6 +17,7 @@ import ScrollArea from "@/components/ScrollArea.astro";
 				previewImage="https://picsum.photos/400/300?random=2"
 				position="top"
 				layout="portrait"
+				tags={["React", "Motion"]}
 			/>
 			<ArticleBlock
 				title="Creativity arise from restrictions, not despite of them"
@@ -32,6 +33,7 @@ import ScrollArea from "@/components/ScrollArea.astro";
 				previewImage="https://picsum.photos/400/300?random=4"
 				position="bottom"
 				layout="portrait"
+				tags={["Astro", "GSAP"]}
 			/>
 
 			<ArticleBlock
