--- a/src/components/Badge.astro
+++ b/src/components/Badge.astro
@@ -8,7 +8,7 @@ const { text, class: className = "" } = Astro.props;
 
 <span
 	class:list={[
-		"border-base-50/30 hover:bg-base-50/30 text-base-50 inline-block rounded-sm border px-3 py-1 font-mono text-[10px] transition-colors duration-200 select-none hover:border-transparent",
+		"inline-block border border-white/30 px-3 py-1 font-mono text-[10px] text-white transition-colors duration-200 select-none hover:border-transparent hover:bg-white/30",
 		className,
 	]}
 >
