--- a/src/components/PreviewBlock.astro
+++ b/src/components/PreviewBlock.astro
@@ -1,6 +1,6 @@
 ---
 import Block from "@/components/Block.astro";
-import { cn } from "@/lib/utils";
+import Badge from "@/components/Badge.astro";
 
 interface Props {
 	title: string;
@@ -9,6 +9,7 @@ interface Props {
 	previewImage: string;
 	position?: "top" | "bottom";
 	layout?: "landscape" | "portrait";
+	tags?: string[];
 }
 
 const {
@@ -18,6 +19,7 @@ const {
 	previewImage,
 	position = "top",
 	layout = "portrait",
+	tags,
 } = Astro.props;
 ---
 
@@ -31,12 +33,21 @@ const {
 >
 	<div
 		class:list={[
-			"flex w-full items-center justify-center",
+			"group relative flex w-full items-center justify-center",
 			layout === "portrait" && "aspect-4/5",
 			layout === "landscape" && "aspect-5/4",
 		]}
 		style={{ backgroundImage: `url(${bgImage})`, backgroundSize: "cover" }}
 	>
+		{
+			tags && tags.length > 0 && (
+				<div class="absolute top-2 right-2 flex gap-2 opacity-100 transition-opacity duration-300 md:opacity-0 md:group-hover:opacity-100">
+					{tags.map((tag) => (
+						<Badge text={tag} />
+					))}
+				</div>
+			)
+		}
 		<img
 			src={previewImage}
 			alt="Preview"
