Add antialiasing to html

--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -6,7 +6,7 @@ import { ClientRouter } from "astro:transitions";
 const { title } = Astro.props;
 ---
 
-<html lang="en">
+<html lang="en" class="antialiased">
 	<head>
 		<meta charset="utf-8" />
 		<link
