--- a/src/pages/test-preview-block.astro
+++ b/src/pages/test-preview-block.astro
@@ -12,7 +12,7 @@ import ScrollArea from "@/components/ScrollArea.astro";
 		>
 			<PreviewBlock
 				title="Test Interaction 1"
-				description="Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam, quos."
+				description="Exercitation nisi esse ut enim. Culpa reprehenderit aute sint elit in tempor veniam labore duis. Voluptate ad ipsum eu laboris laboris amet ad ullamco commodo enim sit."
 				date="Jan 12, 2024"
 				bgImage="https://picsum.photos/800/600?random=1"
 				previewImage="https://picsum.photos/400/300?random=2"
