--- a/src/components/PreviewBlock.astro
+++ b/src/components/PreviewBlock.astro
@@ -27,10 +27,9 @@ const {
 
 <Block
 	class:list={[
-		"flex flex-col gap-4 p-6",
+		"flex flex-col gap-4 p-6 md:justify-between",
 		"mb-12 md:mb-0",
-		position === "top" && "md:justify-between",
-		position === "bottom" && "md:flex-col-reverse md:justify-start",
+		position === "bottom" && "md:flex-col-reverse",
 	]}
 >
 	<div
@@ -58,17 +57,13 @@ const {
 		/>
 	</div>
 	<div class="flex flex-col gap-1 md:w-[480px]">
-		<h2 class="font-cabinet text-base-900 text-2xl font-medium">{title}</h2>
-		<div class="flex justify-between items-center">
-			<p class="font-switzer text-base-300 text-sm">
-				Interaction
-			</p>
-			<p class="font-switzer text-base-300 text-sm">
-				{date}
-			</p>
-		</div>
-		<hr class="border-base-200 mt-1" />
-		<p class="font-switzer text-base-500 text-sm leading-tight">
+		<p class="font-switzer text-base-300 text-sm font-light">
+			{date}
+		</p>
+		<h2 class="font-cabinet text-base-900 text-3xl leading-none font-medium">
+			{title}
+		</h2>
+		<p class="font-switzer text-base-500 mt-2 text-sm leading-tight font-light">
 			{description}
 		</p>
 	</div>
