--- a/src/components/PreviewBlock.astro
+++ b/src/components/PreviewBlock.astro
@@ -57,13 +57,13 @@ const {
 		/>
 	</div>
 	<div class="flex flex-col gap-1 md:w-[480px]">
-		<p class="font-switzer text-base-300 text-sm font-light">
+		<p class="font-switzer text-base-300 text-sm">
 			{date}
 		</p>
 		<h2 class="font-cabinet text-base-900 text-3xl leading-none font-medium">
 			{title}
 		</h2>
-		<p class="font-switzer text-base-500 mt-2 text-sm leading-tight font-light">
+		<p class="font-switzer text-base-500 mt-2 text-sm leading-tight">
 			{description}
 		</p>
 	</div>
