--- a/src/pages/test-preview-block.astro
+++ b/src/pages/test-preview-block.astro
@@ -7,8 +7,8 @@ import Sidebar from "@/components/Sidebar";
 ---
 
 <BaseLayout>
-	<ScrollArea class="h-screen w-screen">
-		<Sidebar client:load>
+	<ScrollArea class="h-screen w-screen" id="main-scroll">
+		<Sidebar client:load scrollAreaId="main-scroll">
 			<div
 				class="flex w-full max-w-[528px] flex-col overflow-y-auto md:h-screen md:w-max md:max-w-none md:flex-row md:overflow-x-auto md:overflow-y-hidden"
 			>
