--- a/src/pages/test-preview-block.astro
+++ b/src/pages/test-preview-block.astro
@@ -7,11 +7,11 @@ import Sidebar from "@/components/Sidebar";
 ---
 
 <BaseLayout>
-	<div class="flex h-screen w-screen">
+	<div class="flex h-screen w-screen flex-col md:flex-row">
 		<Sidebar client:load scrollAreaId="main-scroll" />
 		<ScrollArea class="h-full flex-1" id="main-scroll">
 			<div
-				class="flex w-full max-w-[528px] flex-col overflow-y-auto md:h-screen md:w-max md:max-w-none md:flex-row md:overflow-x-auto md:overflow-y-hidden"
+				class="mx-auto flex w-full max-w-[528px] flex-col overflow-y-auto md:h-screen md:w-max md:max-w-none md:flex-row md:overflow-x-auto md:overflow-y-hidden"
 			>
 				<PreviewBlock
 					title="Test Interaction 1"
