--- a/src/layouts/HorizontalScrollLayout.astro
+++ b/src/layouts/HorizontalScrollLayout.astro
@@ -14,7 +14,7 @@ const { title, scrollAreaId = "main-scroll" } = Astro.props;
 <BaseLayout title={title}>
 	<div class="bg-base-50 flex h-screen w-screen flex-col md:flex-row">
 		<Sidebar client:load scrollAreaId={scrollAreaId} title={title} />
-		<ScrollArea class="h-full flex-1" id={scrollAreaId}>
+		<ScrollArea class="h-full flex-1" id={scrollAreaId} horizontalWheel>
 			<div
 				class="mx-auto flex w-full max-w-[528px] flex-col overflow-y-auto md:h-screen md:w-max md:max-w-none md:flex-row md:overflow-x-auto md:overflow-y-hidden"
 			>
@@ -23,4 +23,3 @@ const { title, scrollAreaId = "main-scroll" } = Astro.props;
 		</ScrollArea>
 	</div>
 </BaseLayout>
-
