--- a/src/layouts/HorizontalScrollLayout.astro
+++ b/src/layouts/HorizontalScrollLayout.astro
@@ -12,7 +12,9 @@ const { title, scrollAreaId = "main-scroll" } = Astro.props;
 ---
 
 <BaseLayout title={title}>
-	<div class="bg-base-50 flex h-screen w-screen flex-col md:flex-row">
+	<div
+		class="bg-base-50 flex h-dvh w-screen flex-col overflow-hidden md:h-screen md:flex-row"
+	>
 		<Sidebar client:load scrollAreaId={scrollAreaId} title={title} />
 		<ScrollArea class="h-full flex-1" id={scrollAreaId} horizontalWheel>
 			<div
@@ -22,4 +24,16 @@ const { title, scrollAreaId = "main-scroll" } = Astro.props;
 			</div>
 		</ScrollArea>
 	</div>
+
+	<style>
+		body {
+			overflow: hidden;
+			position: fixed;
+			width: 100%;
+			height: 100%;
+		}
+		html {
+			overflow: hidden;
+		}
+	</style>
 </BaseLayout>
