--- a/src/pages/test-preview-block.astro
+++ b/src/pages/test-preview-block.astro
@@ -4,7 +4,11 @@ import ArticleBlock from "@/components/ArticleBlock.astro";
 import HorizontalScrollLayout from "@/layouts/HorizontalScrollLayout.astro";
 ---
 
-<HorizontalScrollLayout title="Test page" scrollAreaId="main-scroll">
+<HorizontalScrollLayout
+	title="Test page"
+	scrollAreaId="main-scroll"
+	sidebar="home"
+>
 	<PreviewBlock
 		title="Test Interaction 1"
 		description="Exercitation nisi esse ut enim. Culpa reprehenderit aute sint elit in tempor veniam labore duis. Voluptate ad ipsum eu laboris laboris amet ad ullamco commodo enim sit."
