--- a/src/layouts/HorizontalScrollLayout.astro
+++ b/src/layouts/HorizontalScrollLayout.astro
@@ -2,6 +2,7 @@
 import BaseLayout from "./BaseLayout.astro";
 import ScrollArea from "@/components/ScrollArea.astro";
 import HomeSidebar from "@/components/HomeSidebar";
+import FullPageSidebar from "@/components/FullPageSidebar";
 
 interface Props {
 	title: string;
@@ -19,6 +20,15 @@ const { title, scrollAreaId = "main-scroll", sidebar } = Astro.props;
 		{
 			sidebar === "home" && (
 				<HomeSidebar client:load scrollAreaId={scrollAreaId} title={title} />
+			)
+		}
+		{
+			sidebar === "full-page" && (
+				<FullPageSidebar
+					client:load
+					scrollAreaId={scrollAreaId}
+					title={title}
+				/>
 			)
 		}
 		<ScrollArea class="h-full flex-1" id={scrollAreaId} horizontalWheel>
