--- a/src/pages/test-preview-block.astro
+++ b/src/pages/test-preview-block.astro
@@ -18,6 +18,7 @@ import HorizontalScrollLayout from "@/layouts/HorizontalScrollLayout.astro";
 		position="top"
 		layout="portrait"
 		tags={["React", "Motion"]}
+		link="/full-page"
 	/>
 	<ArticleBlock
 		title="Creativity arise from restrictions, not despite of them"
