--- a/src/pages/full-page.astro
+++ b/src/pages/full-page.astro
@@ -2,4 +2,10 @@
 import FullPageLayout from "@/layouts/FullPageLayout.astro";
 ---
 
-<FullPageLayout title="Full Page Example" />
+<FullPageLayout
+	title="Full Page Example"
+	description="Quis dolor exercitation excepteur esse nulla reprehenderit incididunt sit est deserunt laboris. Laboris in nulla fugiat. Amet nulla nostrud tempor et cillum elit sit elit sunt cillum ipsum nulla et. Nostrud esse amet ullamco Lorem sunt ullamco laborum tempor occaecat elit officia."
+	createdDate="2025-01-01"
+	lastUpdatedDate="2025-01-01"
+	technologies={["React", "Next.js", "Tailwind CSS"]}
+/>
