--- a/src/layouts/FullPageLayout.astro
+++ b/src/layouts/FullPageLayout.astro
@@ -5,9 +5,14 @@ import FullContentArea from "@/components/FullContentArea";
 
 interface Props {
 	title: string;
+	description: string;
+	createdDate: string;
+	lastUpdatedDate: string;
+	technologies: string[];
 }
 
-const { title } = Astro.props;
+const { title, description, createdDate, lastUpdatedDate, technologies } =
+	Astro.props;
 ---
 
 <BaseLayout title={title}>
@@ -18,6 +23,10 @@ const { title } = Astro.props;
 			client:load
 			scrollAreaId="full-page-content"
 			title={title}
+			description={description}
+			createdDate={createdDate}
+			lastUpdatedDate={lastUpdatedDate}
+			technologies={technologies}
 		/>
 		<FullContentArea client:load>
 			<slot>
