Refactor: use browser native scroll

--- a/src/components/ArticleBlock.astro
+++ b/src/components/ArticleBlock.astro
@@ -24,7 +24,7 @@ const {
 
 <Block
 	class:list={[
-		"flex flex-col p-6 md:max-w-[360px]",
+		"flex flex-col p-6 md:min-w-[360px]",
 		"mb-12 md:mb-0",
 		position === "top" && "md:justify-start",
 		position === "bottom" && "md:justify-end",
